--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 body {
-  background-color: pink;
+  background: pink;
 }
 
 h1 {
   color: blue;
-  font-size: 12px; 
+  font-size: 3em; 
 }
 
 h2 {
@@ -14,10 +14,10 @@ h2 {
 }
 
 .completed {
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
 }
 
 #tasks .completed {
-  background-color: #ccc;
+  background: #ccc;
   text-decoration: underline;
 }
